# gstreamer-gpx-overlay

./: .gitignore  README.md  meson.build
src/: gstgpx.c
src/gpxoverlay/: gpxparser.c  gpxparser.h  gstduktape.c  gstduktape.h  gstgpxoverlay.c  gstgpxoverlay.h
src/gpxoverlay/assets/: route.gpx  route.gpx_tmp  test.js
src/gpxoverlay/mod_dom/: document.c  duk_utils.c  element.c  element.h  mod_dom.c  mod_dom.h  trk_point.c  trk_point.h  trk_segment.c
src/gpxparser/: gstgpxparser.c  gstgpxparser.h
src/lib/: gpxparser.c  gpxparser.h  overlaymetadata.c  overlaymetadata.h
src/plugins/gpxoverlay/: duktape.c  gstduktape.c  gstduktape.h  gstgpxoverlay.c  gstgpxoverlay.h
src/plugins/gpxoverlay/assets/: activity_9090497773.gpx  elevation.js  route.gpx  test.js
src/plugins/gpxoverlay/mod_dom/: document.h  duk_utils.h  element.c  mod_dom.c  trk_point.c  trk_segment.c  trk_segment.h
src/plugins/gpxparser/: gstgpxparser.c  gstgpxparser.h
